2003-05-08  Julien MOUTTE <julien@moutte.net>

	* src/bacon-video-widget-gst.c:
	(bacon_video_widget_set_fullscreen),
	(bacon_video_widget_is_fullscreen), (bacon_video_widget_new): First
	draft of fullscreen handling code.

2003-05-08  Bastien Nocera  <hadess@hadess.net>

	* src/gtk-playlist.c: (my_gnome_vfs_get_mime_type_with_data),
	(gtk_playlist_save_current_playlist),
	(gtk_playlist_add_asf_playlist), (gtk_playlist_add_asf):
	* src/totem-video-thumbnailer.c: (main): fixed a bunch of warnings

2003-05-08  Bastien Nocera  <hadess@hadess.net>

	* src/bacon-video-widget-xine.c: (bacon_video_widget_open),
	(bacon_video_widget_get_connection_speed),
	(bacon_video_widget_set_tv_out),
	(bacon_video_widget_set_visuals_quality),
	(bacon_video_widget_get_languages),
	(bacon_video_widget_get_subtitles):
	* src/totem-statusbar.c: (totem_statusbar_init):
	* src/totem.c: (totem_action_restore_pl), (totem_action_set_mrl),
	(update_current_time), (update_media_menu_items), (create_submenu),
	(process_command_line), (main):
	* src/vanity.c: (main): remove unused variables, fix some retvals,
	fix statusbar saying "Streaming" when a file can't be opened, fix
	"double-play" when restoring a playlist

2003-05-07  Julien MOUTTE  <julien@moutte.net>

	* src/bacon-video-widget-gst.c:
	(bacon_video_widget_set_auto_resize),
	(bacon_video_widget_set_scale_ratio),
	(bacon_video_widget_information),
	(bacon_video_widget_get_metadata_string),
	(bacon_video_widget_get_metadata_int),
	(bacon_video_widget_get_metadata_bool), (bacon_video_widget_new): new
	video widget has auto_resize so connecting it, improving metadata
	support (still buggy)
	* src/gstvideowidget.c: (gst_video_widget_expose),
	(gst_video_widget_size_request), (gst_video_widget_allocate): Removing
	debug messages

2003-05-07  Julien MOUTTE  <julien@moutte.net>

	* src/gstvideowidget.c: (gst_video_widget_update_cursor),
	(gst_video_widget_reorder_windows), (gst_video_widget_realize),