@@ -1,3 +1,10 @@
+2003-05-08  Bastien Nocera  <hadess@hadess.net>
+
+	* src/totem.c: (totem_action_restore_pl), (update_mrl_label):
+	added a note about the statusbar with the gst backend,
+	we need to unplug the playlist before adding stuff to it on
+	restore, or we end up playing it on startup
+
 2003-05-08  Julien MOUTTE <julien@moutte.net>
 
 	* src/bacon-video-widget-gst.c:
